fix: list item spacing fix

--- a/pruebas/01-reading-list/aubis-sanchez/src/index.css
+++ b/pruebas/01-reading-list/aubis-sanchez/src/index.css
@@ -21,11 +21,11 @@ body {
 }
 
 .card{
- display: flex;
- flex-direction: row;
- flex-wrap: wrap;
- align-items: "stretch";
- margin: "auto";
+  width: 100%;
+  display: grid !important;
+  grid-auto-columns: 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) !important;
+  row-gap: 25px;
 }
 
 .css-i4bv87-MuiSvgIcon-root {
